--- a/src/app/esgithub/program-edit/program-edit.component.scss
+++ b/src/app/esgithub/program-edit/program-edit.component.scss
@@ -13,3 +13,18 @@
   font-weight: 500;
   margin-right: 4px;
 }
+
+/* Spinner styles */
+.loader {
+  border-top-color: #3b3d5e;
+  animation: spinner 1.5s linear infinite;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
