--- a/src/app/core/modals/conifrmatio-modal/confirmation-modal.component.html
+++ b/src/app/core/modals/conifrmatio-modal/confirmation-modal.component.html
@@ -9,15 +9,15 @@
     <div class="px-4 py-4 sm:px-6 sm:flex sm:flex-row-reverse">
       <button
         (click)="onConfirmationBtnClick()"
-        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm"
+        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:ml-3 sm:w-auto sm:text-sm"
       >
-        Confirm
+        yes
       </button>
       <button
         (click)="onCancelBtnClick()"
         class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm"
       >
-        Cancel
+        No
       </button>
     </div>
   </div>
