--- a/src/app/esgithub/edit-user-program/edit-user-program.component.html
+++ b/src/app/esgithub/edit-user-program/edit-user-program.component.html
@@ -24,7 +24,10 @@
                 <mat-icon>edit</mat-icon>
                 <span class="relative p-2 bottom-1.5 italic">Save changes</span>
               </button>
-              <button class="bg-black text-white font-bold py-1 px-4 rounded ml-2">
+              <button
+                (click)="onSaveNewVersionClick()"
+                class="bg-black text-white font-bold py-1 px-4 rounded ml-2"
+              >
                 <mat-icon>account_tree</mat-icon>
                 <span class="relative p-2 bottom-1.5 italic">Save new version</span>
               </button>
@@ -34,6 +37,11 @@
               >
                 <option selected>SELECT PROGRAM VERSION</option>
                 <option>current version</option>
+                <option
+                  *ngFor="let programVersions of (programVersions$ | async)?.versions"
+                >
+                  {{ programVersions.version }}
+                </option>
               </select>
             </div>
 
