--- a/src/app/esgithub/edit-user-program/edit-user-program.component.html
+++ b/src/app/esgithub/edit-user-program/edit-user-program.component.html
@@ -34,13 +34,16 @@
 
               <select
                 class="bg-black opacity-30 border border-black text-white font-bold relative top-[-2px] rounded ml-2 p-2"
+                [(ngModel)]="selectedVersion"
+                (change)="onProgramVersionSelect()"
               >
-                <option selected>SELECT PROGRAM VERSION</option>
-                <option>current version</option>
+                <option disabled selected [ngValue]="null">SELECT PROGRAM VERSION</option>
+                <option [ngValue]="program">current version</option>
                 <option
-                  *ngFor="let programVersions of (programVersions$ | async)?.versions"
+                  *ngFor="let programVersion of (programVersions$ | async)?.versions"
+                  [ngValue]="programVersion"
                 >
-                  {{ programVersions.version }}
+                  {{ programVersion.version }}
                 </option>
               </select>
             </div>
@@ -86,7 +89,13 @@
           <span class="relative p-2 bottom-1.5 italic">Run code</span>
         </button>
 
-        <input #inputSelect type="file" id="fileInput" style="display: none" />
+        <input
+          #inputSelect
+          type="file"
+          id="fileInput"
+          style="display: none"
+          (change)="onInputFilesSelect($event)"
+        />
         <button
           class="mt-4 relative left-[5%] bg-black text-white font-bold py-1 px-4 rounded mr-5"
           (click)="inputSelect.click()"
