adding version select to program interfaces

--- a/src/app/esgithub/edit-user-program/edit-user-program.component.html
+++ b/src/app/esgithub/edit-user-program/edit-user-program.component.html
@@ -47,7 +47,7 @@
                 </option>
               </select>
               <button
-                (click)="onSaveNewVersionClick()"
+                (click)="onDeleteProgramOrVersionClick()"
                 class="bg-red-700 text-white font-bold py-1 px-4 rounded ml-2"
               >
                 <mat-icon>delete</mat-icon>
