--- a/src/app/esgithub/piplines/pipelines.component.html
+++ b/src/app/esgithub/piplines/pipelines.component.html
@@ -59,6 +59,7 @@
             </div>
             <div class="mt-auto flex">
               <button
+                (click)="onRunPipeLineClick()"
                 class="w-full p-2 bg-black text-white text-center items-center rounded-lg italic font-bold"
               >
                 Run pipeline
