--- a/src/app/esgithub/piplines/pipelines.component.html
+++ b/src/app/esgithub/piplines/pipelines.component.html
@@ -2,6 +2,18 @@
   <div class="z-50">
     <app-side-navbar></app-side-navbar>
   </div>
+  <div
+    *ngIf="isLogin"
+    class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50 flex flex-col"
+  >
+    <div>
+      <mat-spinner diameter="64"></mat-spinner>
+    </div>
+    <div class="text-purple-500 text-xl italic font-bold mt-8">
+      PipeLine in progress...
+    </div>
+  </div>
+
   <div class="flex-1 flex flex-col overflow-hidden">
     <div class="flex flex-col mt-8 w-[90%] relative left-[5%] p-4">
       <div
@@ -10,7 +22,7 @@
           background-image: url('https://s3-alpha-sig.figma.com/img/1eb6/5b9d/44abbf3c1e307507fc3830709dc244f7?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=GzOOeTzleRmENjIH29dVOq7pIYZjuSOF0Ucg0Jrvd1GVU98fO8Q8X90cxrvck1FrMTUF1kp1yLWPW74zg0IYVrdgUKHNyF~bG5XnACd22wHAXT8WvN2xytIe6~BS5M7dCc31DfHzd5fRyiA7LXhEZHTChDpt9iyKwM9J6S~hjugyzHPzHEFmW7Gnkx7lch58B9ErE6snawy646criXpC~b~uhFq~mjWcuP2JXH4bAw5iO2mj-EWE2THzxCQYG7F8qDLTQ6uw9R2Q4f1FwPP~2pScL6t-CvuE~nVpNEDHze1TL4aPNdwTCZbaNi9bM45C7hozTPL1WlcnCkfCsJ~qKg__');
         "
       >
-        <div class="w-full h-[70vh] relative mt-8 flex flex-row">
+        <div class="w-full h-[80vh] relative mt-8 flex flex-row">
           <div
             class="w-1/2 h-full flex flex-col bg-black bg-opacity-10 backdrop-blur-sm rounded-lg p-2 mr-4"
           >
@@ -193,6 +205,24 @@
                 </div>
               </div>
             </ng-container>
+          </div>
+        </div>
+        <div
+          class="w-full h-[10vh] flex flex-col bg-black bg-opacity-10 backdrop-blur-sm rounded-lg p-2 mr-4 mt-2"
+        >
+          <div *ngIf="generatedFiles.length > 0" class="flex justify-center">
+            <div
+              *ngFor="let file of generatedFiles"
+              class="mx-2 cursor-pointer"
+              [@fadeIn]
+              (click)="onGeneratedFileClick(file)"
+            >
+              <img
+                class="h-20 w-20 rounded-lg p-4"
+                [src]="getFileIcon(file)"
+                alt="File Icon"
+              />
+            </div>
           </div>
         </div>
       </div>
