--- a/src/app/esgithub/piplines/pipelines.component.html
+++ b/src/app/esgithub/piplines/pipelines.component.html
@@ -150,57 +150,80 @@
 
             <ng-container *ngIf="programsList$ | async as programs">
               <div
-                *ngFor="let program of programs"
-                class="h-48 bg-black opacity-30 rounded-lg mt-2 relative"
-                draggable="true"
-                (dragstart)="onDragStart($event, program)"
+                *ngIf="isRefreshing"
+                class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50 flex flex-col"
               >
+                <div>
+                  <mat-spinner diameter="64"></mat-spinner>
+                </div>
+                <div class="text-purple-500 text-xl italic font-bold mt-8">
+                  Reloading ...
+                </div>
+              </div>
+              <div *ngIf="!isRefreshing">
                 <div
-                  class="flex flex-row ml-6 z-10 border-white border w-44 rounded-lg relative top-2 p-1"
+                  *ngFor="let program of programs"
+                  class="h-48 bg-black opacity-30 rounded-lg mt-2 relative"
+                  draggable="true"
+                  (dragstart)="onDragStart($event, program)"
                 >
-                  <img
-                    class="h-8 w-8 rounded-full"
-                    *ngIf="program.programmingLanguage === 'javascript'"
-                    src="assets/images/icons/javascript-svgrepo-com.svg"
-                  />
-                  <img
-                    class="h-8 w-8 rounded-full"
-                    *ngIf="program.programmingLanguage === 'python'"
-                    src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg"
-                  />
-                  <img
-                    class="h-8 w-8 rounded-full"
-                    *ngIf="program.programmingLanguage === 'php'"
-                    src="https://upload.wikimedia.org/wikipedia/commons/3/31/Webysther_20160423_-_Elephpant.svg"
-                  />
-                  <img
-                    class="h-8 w-8 rounded-full"
-                    *ngIf="program.programmingLanguage === 'c++'"
-                    src="https://upload.wikimedia.org/wikipedia/commons/3/32/C%2B%2B_logo.png"
-                  />
-                  <div class="text-white italic font-bold text-lg ml-4">
-                    {{ program.programmingLanguage }}
+                  <div class="flex flex-row">
+                    <div
+                      class="flex flex-row ml-6 z-10 border-white border w-44 rounded-lg relative top-2 p-1"
+                    >
+                      <img
+                        class="h-8 w-8 rounded-full"
+                        *ngIf="program.programmingLanguage === 'javascript'"
+                        src="assets/images/icons/javascript-svgrepo-com.svg"
+                      />
+                      <img
+                        class="h-8 w-8 rounded-full"
+                        *ngIf="program.programmingLanguage === 'python'"
+                        src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg"
+                      />
+                      <img
+                        class="h-8 w-8 rounded-full"
+                        *ngIf="program.programmingLanguage === 'php'"
+                        src="https://upload.wikimedia.org/wikipedia/commons/3/31/Webysther_20160423_-_Elephpant.svg"
+                      />
+                      <img
+                        class="h-8 w-8 rounded-full"
+                        *ngIf="program.programmingLanguage === 'c++'"
+                        src="https://upload.wikimedia.org/wikipedia/commons/3/32/C%2B%2B_logo.png"
+                      />
+                      <div class="text-white italic font-bold text-lg ml-4">
+                        {{ program.programmingLanguage }}
+                      </div>
+                    </div>
+                    <div class="left-[65%] relative top-2">
+                      <i
+                        (click)="onViewProgramClick(program.programId)"
+                        class="material-icons text-gray-400 text-3xl font-bold cursor-pointer z-10"
+                      >
+                        remove_red_eye
+                      </i>
+                    </div>
                   </div>
-                </div>
-                <div class="text-white text-sm relative top-4 ml-6">
-                  {{ program.description }}
-                </div>
-                <div class="flex-row flex relative top-12 ml-6">
-                  <p class="text-white">input files:</p>
-                  <div
-                    class="text-green-200 ml-2 mr-2"
-                    *ngFor="let type of program.inputTypes"
-                  >
-                    {{ type }}
+                  <div class="text-white text-sm relative top-4 ml-6">
+                    {{ program.description }}
                   </div>
-                </div>
-                <div class="flex-row flex relative top-14 ml-6">
-                  <p class="text-white">output files:</p>
-                  <div
-                    class="text-yellow-200 ml-2 mr-2"
-                    *ngFor="let type of program.outputTypes"
-                  >
-                    {{ type }}
+                  <div class="flex-row flex relative top-12 ml-6">
+                    <p class="text-white">input files:</p>
+                    <div
+                      class="text-green-200 ml-2 mr-2"
+                      *ngFor="let type of program.inputTypes"
+                    >
+                      {{ type }}
+                    </div>
+                  </div>
+                  <div class="flex-row flex relative top-14 ml-6">
+                    <p class="text-white">output files:</p>
+                    <div
+                      class="text-yellow-200 ml-2 mr-2"
+                      *ngFor="let type of program.outputTypes"
+                    >
+                      {{ type }}
+                    </div>
                   </div>
                 </div>
               </div>
