--- a/src/app/esgithub/home-page/program-item-list/program-item-list.component.html
+++ b/src/app/esgithub/home-page/program-item-list/program-item-list.component.html
@@ -128,7 +128,7 @@
       <div class="flex flex-row p-3 z-10" *ngIf="isProfileOwner">
         <i
           [routerLink]="['/program/edit/', program.programId]"
-          class="material-icons text-white text-3xl font-bold cursor-pointer z-10 text-blue-500"
+          class="material-icons text-white text-3xl font-bold cursor-pointer z-10"
         >
           edit
         </i>
