--- a/src/app/esgithub/piplines/pipelines.component.html
+++ b/src/app/esgithub/piplines/pipelines.component.html
@@ -1,10 +1,7 @@
 <div class="flex h-screen bg-[#1E1F3D]">
-  <div class="z-50">
-    <app-side-navbar></app-side-navbar>
-  </div>
   <div
     *ngIf="isLogin"
-    class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50 flex flex-col"
+    class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50 flex-col"
   >
     <div>
       <mat-spinner diameter="64"></mat-spinner>
