--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<div class="flex">
+  <app-side-navbar></app-side-navbar>
+  <router-outlet></router-outlet>
+</div>
