adding program new design for program list

--- a/src/app/esgithub/home-page/program-item-list/program-item-list.component.html
+++ b/src/app/esgithub/home-page/program-item-list/program-item-list.component.html
@@ -1,4 +1,4 @@
-<div
+<!-- <div
   class="relative p-4 rounded-lg mx-auto text-white mb-10 h-[320px]"
   [ngStyle]="{ 'background-image': 'url(' + selectedBgImageUrl + ')' }"
   [ngClass]="{ 'w-full': homePage === false, 'w-[90%]': homePage === true }"
@@ -145,4 +145,22 @@
   </div>
 
   <div class="liner absolute inset-0"></div>
-</div>
+</div> -->
+
+<a
+  [ngClass]="{
+    'bg-[#141414] block rounded-2xl mb-4 p-6': true
+  }"
+  [routerLink]="['/program', program.programId]"
+>
+  <app-program-header [programIcon]="program.programmingLanguage"></app-program-header>
+  <app-program-user [userProgram]="program"></app-program-user>
+
+  <div class="text-white my-7">
+    {{ program.description }}
+  </div>
+
+  <app-program-code [userProgram]="program"></app-program-code>
+
+  <app-program-inputs-outputs [userProgram]="program"></app-program-inputs-outputs>
+</a>
