--- a/src/app/esgithub/side-profile/side-profile.component.html
+++ b/src/app/esgithub/side-profile/side-profile.component.html
@@ -1,4 +1,4 @@
-<aside class="w-[330px] bg-[#3B3D5E] h-[100vh] hidden xl:block">
+<aside class="w-[330px] bg-[#141414] h-screen hidden xl:block">
   <div class="flex flex-col justify-center items-center">
     <img
       class="w-[170px] h-[170px] rounded-full object-cover mb-3 mt-3"
