--- a/src/app/esgithub/home-page/home-page.component.html
+++ b/src/app/esgithub/home-page/home-page.component.html
@@ -1,11 +1,11 @@
 <div class="flex h-screen bg-gray-100" *ngIf="userData$ | async; let currentUser">
-  <div class="w-full h-[100vh] overflow-hidden bg-[#1E1F3D]">
-    <div
-      class="p-4 bg-white opacity-20 shadow-md rounded-lg flex justify-center items-center mt-4 w-[90%] relative left-[5%]"
-    >
-      <div class="flex flex-row items-center gap-4">
-        <div class="flex items-center gap-2">
-          <div
+  <div class="w-full h-screen p-10 overflow-auto bg-[#212121]">
+    <div class="flex gap-2">
+      <app-search-program-input
+        [searchControl]="filtersOptionsForm.controls.searchQuery"
+      ></app-search-program-input>
+
+      <!-- <div
             class="flex flex-row mr-2"
             *ngFor="let availableLangage of AvailableLangagesE"
           >
@@ -21,35 +21,22 @@
               class="flex items-center p-1 bg-white text-purple-500 italic font-bold"
               >{{ availableLangage }}</label
             >
-          </div>
-        </div>
-        <div class="relative">
-          <input
-            type="text"
-            placeholder="Search..."
-            class="border p-2 rounded pl-10 border-purple-500 text-black"
-            [formControl]="filtersOptionsForm.controls.searchQuery"
-          />
-          <span class="material-icons absolute left-2 top-2 text-black cursor-pointer"
-            >search</span
-          >
-        </div>
+          </div> -->
+    </div>
+    <ng-container *ngIf="programsList$ | async as programsList">
+      <div *ngIf="programsList.length === 0" class="text-white">No program found</div>
+      <div *ngFor="let program of programsList">
+        <app-program-item-list
+          [program]="program"
+          [currentUser]="currentUser"
+          [homePage]="true"
+          (likeClickEvent)="likeProgram($event)"
+          (dislikeClickEvent)="dislikeProgram($event)"
+          (removeClickEvent)="deleteProgram($event)"
+        >
+        </app-program-item-list>
       </div>
-    </div>
-    <div
-      class="m-10 grid grid-cols-1 md:grid-cols-2 gap-4 overflow-auto relative h-[90%]"
-    >
-      <app-program-item-list
-        *ngFor="let program of programsList$ | async"
-        [program]="program"
-        [currentUser]="currentUser"
-        [homePage]="true"
-        (likeClickEvent)="likeProgram($event)"
-        (dislikeClickEvent)="dislikeProgram($event)"
-        (removeClickEvent)="deleteProgram($event)"
-      >
-      </app-program-item-list>
-    </div>
+    </ng-container>
   </div>
   <div>
     <app-side-profile [currentUser]="currentUser"></app-side-profile>
